fix: fix container in flexboxes

--- a/packages/components/content/source/2-molecules/quote/quote.scss
+++ b/packages/components/content/source/2-molecules/quote/quote.scss
@@ -26,6 +26,7 @@ $vars: meta.module-variables(quote-vars);
   }
 
   &__content {
+    flex: 1;
     position: relative;
     padding-left: var(--c-quote_content--padding-left);
 
