chore: move collapsible box & contact components to base

--- a/packages/components/content/source/visual-slider/visual-slider.scss
+++ b/packages/components/content/source/visual-slider/visual-slider.scss
@@ -1,7 +1,7 @@
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
 @use 'bourbon/core/bourbon';
-@use '@kickstartds/base/source/slider/container';
+@use '../slider/container';
 
 @use './visual-slider-vars';
 @use './slide-preview/visual-slide-preview';
