--- a/packages/components/base/source/teaser-row/teaser-row.scss
+++ b/packages/components/base/source/teaser-row/teaser-row.scss
@@ -1,9 +1,11 @@
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './teaser-row-vars';
+@use './container';
 
 $vars: meta.module-variables(teaser-row-vars);
 @include custom-properties.styles($vars);
+@include container.wrapper;
 
 .c-teaser {
   .c-teaser-row &__body {
