refactor: rename type `ui` variant to `interface`

--- a/packages/components/base/source/contact/contact.scss
+++ b/packages/components/base/source/contact/contact.scss
@@ -22,7 +22,7 @@ $vars: meta.module-variables(contact-vars);
   }
 
   &__links {
-    font: var(--ks-font-ui-s);
+    font: var(--ks-font-interface-s);
     list-style: none;
     padding: 0;
     margin: 0;
