--- a/packages/components/base/source/generic/kbd/_kbd.scss
+++ b/packages/components/base/source/generic/kbd/_kbd.scss
@@ -1,5 +1,5 @@
 kbd {
-  font: var(--ks-font-ui-s);
+  font: var(--ks-font-interface-s);
   display: inline-block;
   margin: 0 0.1em;
   padding: 0.1em 0.5em 0;
