--- a/packages/components/base/source/image/lightbox-image/_lightbox.scss
+++ b/packages/components/base/source/image/lightbox-image/_lightbox.scss
@@ -16,7 +16,7 @@ $vars: meta.module-variables(lightbox-vars);
   --pswp-icon-stroke-width: var(--c-lightbox--stroke-width);
   --pswp-error-text-color: var(--c-lightbox--error-text-color);
 
-  font: var(--ks-font-ui-s);
+  font: var(--ks-font-interface-s);
 
   &__caption {
     position: absolute;
