--- a/packages/components/base/source/table/_table-vars.scss
+++ b/packages/components/base/source/table/_table-vars.scss
@@ -30,7 +30,7 @@ $zebra: (
 
 $caption: (
   '.c-table': (
-    font: var(--ks-font-ui-xs),
+    font: var(--ks-font-interface-xs),
     font-weight: null,
     font-style: italic,
   ),
