--- a/packages/components/blog/source/post-head/post-head-vars.scss
+++ b/packages/components/blog/source/post-head/post-head-vars.scss
@@ -2,7 +2,7 @@ $name-: 'c-post-head' !default;
 
 $date: (
   '.c-post-head': (
-    font: var(--ks-font-ui-xs),
+    font: var(--ks-font-interface-xs),
     font-weight: var(--ks-font-weight-bold),
     color: var(--ks-color-fg-alpha-5),
   ),
