--- a/packages/components/blog/source/post-meta/_post-meta-vars.scss
+++ b/packages/components/blog/source/post-meta/_post-meta-vars.scss
@@ -9,7 +9,7 @@ $host: (
 $item: (
   '.c-post-meta': (
     gap: var(--ks-spacing-xs),
-    font: var(--ks-font-ui-s),
+    font: var(--ks-font-interface-s),
     color: var(--ks-text-color-interface),
     icon-size: 1.2em,
   ),
