--- a/packages/components/content/source/count-up/_count-up-vars.scss
+++ b/packages/components/content/source/count-up/_count-up-vars.scss
@@ -17,7 +17,7 @@ $icon: (
 $number: (
   '.c-count-up': (
     margin: 0 0 0.5em,
-    font: var(--ks-font-ui-xl),
+    font: var(--ks-font-interface-xl),
     font-weight: var(--ks-font-weight-bold),
     color: var(--ks-text-color-default),
   ),
