--- a/packages/components/base/source/button/_button-vars.scss
+++ b/packages/components/base/source/button/_button-vars.scss
@@ -4,7 +4,7 @@ $host: (
   '.c-button': (
     color-primary: var(--ks-color-primary),
     color-secondary: var(--ks-color-primary-inverted),
-    font: var(--ks-font-ui-m),
+    font: var(--ks-font-interface-m),
     font-weight: var(--ks-font-weight-regular),
     icon-size: 1.5em,
     padding: 0.4rem 1.3rem 0.35rem,
@@ -41,11 +41,11 @@ $host: (
   ),
   '.c-button--small': (
     padding: 0.4rem 1rem 0.45rem,
-    font: var(--ks-font-ui-s),
+    font: var(--ks-font-interface-s),
   ),
   '.c-button--large': (
     padding: 0.45rem 1.7rem 0.5rem,
-    font: var(--ks-font-ui-l),
+    font: var(--ks-font-interface-l),
   ),
 ) !default;
 
