--- a/packages/components/base/source/tag-label/_tag-label-vars.scss
+++ b/packages/components/base/source/tag-label/_tag-label-vars.scss
@@ -9,21 +9,21 @@ $host: (
     color-hover: var(--ks-text-color-interface-hover),
   ),
   '.c-tag-label--s': (
-    font: var(--ks-font-ui-xs),
+    font: var(--ks-font-interface-xs),
     font-weight: var(--ks-font-weight-regular),
     border-radius: 1rem,
     vertical-padding: 0.325rem,
     horizontal-padding: 0.65rem,
   ),
   '.c-tag-label--m': (
-    font: var(--ks-font-ui-s),
+    font: var(--ks-font-interface-s),
     font-weight: var(--ks-font-weight-regular),
     border-radius: 1.25rem,
     vertical-padding: 0.4rem,
     horizontal-padding: 1rem,
   ),
   '.c-tag-label--l': (
-    font: var(--ks-font-ui-m),
+    font: var(--ks-font-interface-m),
     font-weight: var(--ks-font-weight-regular),
     border-radius: 1.5rem,
     vertical-padding: 0.5rem,
