feat: add border color tokens

--- a/packages/components/base/source/table/_table-vars.scss
+++ b/packages/components/base/source/table/_table-vars.scss
@@ -17,7 +17,8 @@ $header: (
 
 $border: (
   '.c-table': (
-    border: var(--ks-border-width-default) solid var(--ks-color-fg-alpha-1),
+    border: var(--ks-border-width-default) solid
+      var(--ks-border-color-interface),
   ),
 ) !default;
 
