--- a/packages/components/base/source/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/teaser/_teaser-vars.scss
@@ -5,7 +5,8 @@ $host: (
     font: var(--ks-font-copy-m),
     color: var(--ks-text-color-default),
     background: var(--ks-background-color-primary-inverted-translucent),
-    border: var(--ks-border-width-default) solid var(--ks-color-fg-to-bg-9),
+    border: var(--ks-border-width-default) solid
+      var(--ks-border-color-interface),
     border-radius: null,
     shadow: null,
     shadow-hover: (
