--- a/packages/components/form/source/form-field/_form-field-vars.scss
+++ b/packages/components/form/source/form-field/_form-field-vars.scss
@@ -3,7 +3,7 @@ $name-: 'c-form-field';
 $host: (
   ':root, [ks-theme], [ks-inverted]': (
     border: var(--ks-border-width-default) solid,
-    border-color: var(--ks-color-fg-to-bg-6),
+    border-color: var(--ks-border-color-interface-interactive),
     border-radius: var(--ks-border-radius-control),
     background: var(--ks-background-color-interface-interactive),
     background-disabled:
@@ -14,20 +14,20 @@ $host: (
 
 $hover: (
   ':root, [ks-theme], [ks-inverted]': (
-    border-color: var(--ks-color-fg-to-bg-5),
+    border-color: var(--ks-border-color-interface-interactive-hover),
   ),
 ) !default;
 
 $focus: (
   ':root, [ks-theme], [ks-inverted]': (
-    border-color: var(--ks-color-primary),
+    border-color: var(--ks-border-color-interface-interactive-active),
     shadow: 0 0 4px -1px,
   ),
 ) !default;
 
 $icon: (
   ':root, [ks-theme], [ks-inverted]': (
-    size: calc(var(--ks-line-height-ui-m) * 0.75em),
+    size: calc(var(--ks-line-height-interface-m) * 0.75em),
     color: var(--ks-color-fg-alpha-7),
   ),
 ) !default;
