docs(css): refine dark theme

--- a/packages/tools/docusaurus/src/css/custom.css
+++ b/packages/tools/docusaurus/src/css/custom.css
@@ -9,11 +9,6 @@
   --l-section--content-padding: var(--ifm-global-spacing);
 }
 
-a:not(.c-button) {
-  color: var(--ifm-link-color);
-  background: unset;
-}
-
 .navbar__item.navbar__link,
 a.footer__link-item {
   font-weight: var(--ifm-font-weight-semibold);
@@ -29,43 +24,19 @@ a.footer__link-item {
   background-color: var(--ifm-color-primary) !important;
 }
 
+.pagination-nav__link {
+  border: var(--ks-border-width-emphasized) solid
+    var(--ks-border-color-interface-interactive);
+}
+
+.pagination-nav__link:hover {
+  border-color: var(--ks-border-color-interface-interactive-hover);
+}
+
 code {
   border: none;
 }
 
-:root [ks-theme='docs'] {
-  --ks-spacing-xxs-bp-factor: 1;
-  --ks-spacing-xs-bp-factor: 1;
-  --ks-spacing-s-bp-factor: 1;
-  --ks-spacing-m-bp-factor: 1;
-  --ks-spacing-l-bp-factor: 1;
-  --ks-spacing-xl-bp-factor: 1;
-  --ks-spacing-xxl-bp-factor: 1;
-
-  --ks-font-size-display-bp-factor: 1;
-  --ks-font-size-copy-bp-factor: 1;
-  --ks-font-size-ui-bp-factor: 1;
-
-  --ks-font-display-xxs: var(--ks-font-ui-xxs);
-  --ks-font-display-xs: var(--ks-font-ui-xs);
-  --ks-font-display-s: var(--ks-font-ui-s);
-  --ks-font-display-m: var(--ks-font-ui-m);
-  --ks-font-display-l: var(--ks-font-ui-l);
-  --ks-font-display-xl: var(--ks-font-ui-xl);
-  --ks-font-display-xxl: var(--ks-font-ui-xxl);
-
-  --ks-font-copy-xxs: 0.45rem;
-  --ks-font-copy-xs: 0.5rem;
-  --ks-font-copy-s: 0.65rem;
-  --ks-font-copy-m: 0.75rem;
-  --ks-font-copy-l: 0.85rem;
-  --ks-font-copy-xl: 1rem;
-  --ks-font-copy-xxl: 1.25rem;
-
-  --ks-border-width-default: 1px;
-  --ks-border-width-emphasized: 1px;
-}
-
-:root [ks-theme='docs'] .l-section__container {
-  --l-section_col--min-width: 15rem;
+.navbar__link--active {
+  color: var(--ifm-color-primary);
 }
