--- a/packages/tools/docusaurus/src/css/theme.css
+++ b/packages/tools/docusaurus/src/css/theme.css
@@ -33,7 +33,10 @@
   --ks-font-copy-l: 0.85rem;
   --ks-font-copy-xl: 1rem;
   --ks-font-copy-xxl: 1.25rem;
+}
 
+:root,
+[ks-theme] {
   --ks-border-width-default: 1px;
   --ks-border-width-emphasized: 1px;
 }
