--- a/packages/tools/docusaurus/src/css/custom.css
+++ b/packages/tools/docusaurus/src/css/custom.css
@@ -40,3 +40,11 @@ code {
 .navbar__link--active {
   color: var(--ifm-color-primary);
 }
+
+.ch-frame-zoom {
+  --ch-frame-zoom: 0.5 !important;
+}
+
+.ch-code-scroll-parent {
+  font-size: 12px;
+}
